Fix #280 Implement Part 3 Step 11 and Update Part 1 Step 20